# stsr

./: Cargo.toml  LICENSE.md  README.md
src/: config.rs  error.rs  main.rs  status.rs  x11.rs
src/status/: error.rs  sources.rs  utils.rs
src/status/sources/: command.rs  cpu.rs  ram.rs
