[package]
name = "stsR"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
chrono-tz = { version = "0.10", features = [ "filter-by-regex" ] }
futures = "0.3"

[profile.dev]
opt-level = 2
lto = true

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
