[package]
name = "stsr"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt", "process", "time", "macros", "fs", "io-util", "signal"] }
chrono = "0.4"
chrono-tz = { version = "0.10", features = [ "filter-by-regex" ] }
futures = "0.3"
x11rb = "0.13"

[profile.dev]
opt-level = 2
lto = true

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
